# dftimewolf

./: .gitignore  .pylintrc  .style.yapf  .travis.yml  404.html  ACKNOWLEDGEMENTS  AUTHORS  MANIFEST.in  Pipfile  README  README.md  appveyor.yml  codecov.yaml  dependencies.ini  dftimewolf.code-workspace  dftimewolf.ini  generate_recipe_doc.py  index.html  mkdocs.yml  mypy.ini  pylintrc  pyproject.toml  pytype.conf  readme.md  requirements-dev.txt  requirements.txt  run_tests.py  search.html  setup.cfg  setup.py  sitemap.xml  test_integration.sh  tox.ini
.github/workflows/: coverage.yaml  docs-publish.yaml  docs.yaml  install.yml  mypy.yml  pip-unittest.yml  pylint.yml  pytype.yml  unittest-pipenv.yml  unittest-pipenv37.yml  unittest37.yml  unittest38.yml  unittests.yml
architecture/: index.html
config/e2e/: e2e_grr_artifact_hosts.sh  jenkins_dftimewolf_install.sh
config/linux/: gift_ppa_install.sh  grr_install.sh  jenkins_dftimewolf_install.sh  jenkins_pip_install.sh  timesketch.token  timesketchrc
config/travis/: install.sh  runtests.sh
config/vagrant/: Vagrantfile
data/: TelemetryTable.ddl  artifact_grep.json  config.json  gcp_turbinia.json  gcp_turbinia_import.json  grr_artifact_hosts.json  grr_fetch_files.json  grr_hunt_file.json  grr_huntresults_plaso_timesketch.json  timesketch_upload.json
data/recipes/: artifact_grep.json  aws_disk_to_gcp.json  aws_forensics.json  aws_logging_collect.json  aws_logging_ts.json  aws_turbinia_ts.json  aws_turbinia_ts_legacy.json  azure_forensics.json  azure_logging_collect.json  azure_logging_ts.json  bigquery_collect.json  bigquery_ts.json  gce_disk-export.json  gce_disk_copy.json  gce_disk_export.json  gcp_cloud_resource_tree.json  gcp_cloud_resource_tree_offline.json  gcp_disk_export_dd.json  gcp_forensics.json  gcp_forensics_gke.json  gcp_forensics_new.json  gcp_logging_cloudaudit_ts.json  gcp_logging_cloudsql_ts.json  gcp_logging_collect.json  gcp_logging_gce_instance_ts.json  gcp_logging_gce_ts.json  gcp_logging_gke.json  gcp_logging_gke_workload.json  gcp_logging_l2t_ts.json  gcp_logging_ts.json  gcp_turbinia.json  gcp_turbinia_api_ts.json  gcp_turbinia_disk_copy_ts.json  gcp_turbinia_disk_copy_ts_legacy.json  gcp_turbinia_import.json  gcp_turbinia_ts.json  gcp_turbinia_ts_legacy.json  gcp_turbinia_ts_threaded.json  gdrive_collect.json  grr_artifact_grep.json  (+46 more)
developers-guide/: index.html
dftimewolf/: __init__.py  config.json  config.py  dftimewolf.json  internals.py  timewolf_cli.py  timewolf_collect.py  timewolf_export.py  timewolf_process.py  user_config.py.sample
dftimewolf/cli/: __init__.py  curses_display_manager.py  dftimewolf_recipes.py
dftimewolf/lib/: __init__.py  args_validator.py  auth.py  cache.py  collectors.py  errors.py  logging_utils.py  module.py  processors.py  resources.py  state.py  telemetry.py  timesketch_utils.py  utils.py
dftimewolf/metawolf/: metawolf.py  output.py  session.py  utils.py
docker/dev/: Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh
docker/dftimewolf-dev/: Dockerfile  docker-compose.yaml
docker/dftimewolf-release/: Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh
docs/: Makefile  architecture.md  conf.py  developers-guide.md  generate_recipe_doc.py  getting-started.md  index.md  make.bat  metawolf.md  module-list.md  module-writing-basics.md  recipe-caveat.md  recipe-list.md  user-manual.md
getting-started/: index.html
metawolf/: index.html
module-writing-basics/: index.html
recipe-caveat/: index.html
recipe-list/: index.html
search/: search_index.json
tests/: end_to_end.py  test_dftimefwolf.py  test_dftimewolf.py  test_lib.py
timeflow/: __init__.py  config.py  config.py.sample  internals.py  timeflow.json
user-manual/: index.html
utils/: check_dependencies.py  dependencies.py  export_machine_startup_script.sh  review.py  upload.py  utils.py
(+280 files in other folders)
