[tool.poetry]
name = "dftimewolf"
version = "0.1.0"
description = ""
authors = ["Thomas Chopitea <tomchop@gmail.com>"]
license = "Apache"

[tool.poetry.scripts]
dftimewolf = 'dftimewolf.cli.dftimewolf_recipes:Main'

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
docker = "^5.0.3"
google-cloud-logging = "2.3.1"
google-cloud-bigquery = "*"
libcloudforensics = "^20220718"
PyPDF2 = "^2.6.0"
six = "^1.16.0"
timesketch-import-client = "^20210602"
pandas = "^1.4.3"
google-cloud-error-reporting = "*"
cmd2 = "^2.4.2"
psutil = "^5.9.1"
prettytable = "^3.3.0"
vt-py = "^0.14.0"
boto3 = "^1.24.31"
python-magic = "^0.4.27"
turbinia = "20220216"
grr-api-client = "^3.4.6"

[tool.poetry.group.dev.dependencies]
mock = "^4.0.3"
pylint = "2.10.*"
coverage = "^6.4.2"
mypy = "^0.961"
yapf = "^0.32.0"
types-protobuf = "^3.19.22"
types-filelock = "^3.2.7"
types-PyYAML = "^6.0.10"
mkdocs = "^1.3.0"
graphviz = "^0.20"
pytype = "^2022.6.30"

[tool.poetry.group.spannertelemetry]
optional = true

[tool.poetry.group.spannertelemetry.dependencies]
google-cloud-spanner = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
