[tool.poetry]
name = "dftimewolf"
version = "0.1.0"
description = ""
authors = ["Thomas Chopitea <tomchop@gmail.com>"]
license = "Apache"

[tool.poetry.scripts]
dftimewolf = 'dftimewolf.cli.dftimewolf_recipes:Main'

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
backoff = "^2.2.1"
boto3 = "^1.43.17"
docker = "^7.1.0"
filelock = "^3.29.0"
google-cloud-bigquery = "^3.25.0"
google-cloud-logging = "^3.14.0"
google-generativeai = "^0.8.6"
grr-api-client = "^3.4.9"
libcloudforensics = "^20260505"
openrelik-api-client = "^0.5.0"
pandas = "^3.0.3"
ratelimit = "^2.2.1"
timesketch-api-client = "^20260312"
timesketch-import-client = "^20260108"
vertexai = "^1.71.1"
vt-py = "^0.22.0"

[tool.poetry.group.dev.dependencies]
absl-py = "^2.4.0"
coverage = "^7.14.1"
graphviz = "^0.21"
mkdocs = "^1.6.1"
mock = "^5.2.0"
mypy = "^2.1.0"
pylint = "^4.0.5"
pytype = "^2024.10.11"

[tool.poetry.group.spannertelemetry]
optional = true

[tool.poetry.group.spannertelemetry.dependencies]
google-cloud-spanner = "^3.64.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
